# nlip_soln

./: NLIP_PII_FRAMEWORK.md  README.md  pyproject.toml  scripts.py
inter-agent-communication/: readme-inter-communication.md
langchain_demo/: README.md  demo.py  requirements.txt
llamaindex_demo/: README.md  demo.py  requirements.txt
nlip_soln/: genai.py
nlip_soln/chat/: README.md  chatbot.py
nlip_soln/chat2/: README.md  stateful_chatbot.py
nlip_soln/echo/: README.md  echo.py
nlip_soln/integrator/: README.md  integrator.py
nlip_soln/mcp/: README.md  mcp.py
nlip_soln/mcp/client/: client.py  detector.py
nlip_soln/mcp/server/hotel/: hotel.py
