[tool.poetry]
name = "nlip-soln"
version = "0.1.0"
description = ""
authors = ["Dinesh Verma <dverma@us.ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
nlip-server = {path = "../nlip_server", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-chat = "scripts:start_chat_server"
start-chat2 = "scripts:start_stateful_chat_server"
start-integration = "scripts:start_integration_server"
