[tool.poetry]
name = "nlip-soln"
version = "0.1.0"
description = ""
authors = ["Dinesh Verma <dverma@us.ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
mcp = "^1.6.0"
ollama = "^0.4.7"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-chat = "scripts:start_chat_server"
start-chat2 = "scripts:start_stateful_chat_server"
start-mcp = "scripts:start_mcp"
start-integration = "scripts:start_integration_server"
start-echo = "scripts:start_echo_server"
